--- a/test/center/crust/process/specprocess.ipynb
+++ b/test/center/crust/process/specprocess.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from spec.crust.data.spec import StellarSpec"
+    "from spec.center.crust.data.spec import StellarSpec"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from spec.crust.process.specprocess import StellarSpecProcess"
+    "from spec.center.crust.process.specprocess import StellarSpecProcess"
    ]
   },
   {
