--- a/test/testdata/loader_test.ipynb
+++ b/test/testdata/loader_test.ipynb
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from spec.crust.data.sky import StellarSky"
+    "from spec.center.crust.data.sky import StellarSky"
    ]
   },
   {
