--- a/test/interface/gateway/specprocessIF.ipynb
+++ b/test/interface/gateway/specprocessIF.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c7d76847-b7b0-406a-8ede-9e82ab6d7177",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "id": "13d6ae03-0cb5-4dc1-ad27-052227c50e25",
    "metadata": {},
@@ -37,7 +29,7 @@
     }
    ],
    "source": [
-    "PROJECT_PATH = '/home/swei20/PIML/PIML_specIF/'\n",
+    "PROJECT_PATH = '/home/swei20/PIML/PIMLspec/'\n",
     "import sys\n",
     "sys.path.insert(0, PROJECT_PATH)\n",
     "[sys.path.append(i) for i in ['.', '..']]"
@@ -45,13 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "a071e9d7-d843-4b30-ab8f-719084a14ccf",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "env_vars = !cat /home/swei20/PIML/PIML_v1/.env\n",
+    "env_vars = !cat /home/swei20/PIML/PIMLspec/.env\n",
     "for var in env_vars:\n",
     "    key, value = var.split('=')\n",
     "    os.environ[key] = value"
@@ -59,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "23db6dee-de36-4481-a30a-4aaf6f6f549d",
    "metadata": {},
    "outputs": [],
@@ -71,59 +63,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c5c0c7f5-6593-4841-bad5-6b977f626045",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "75d05b41-d4f1-4d38-bbf4-90dde0371db2",
+   "execution_count": 14,
+   "id": "c1d8c579-052e-4f00-aa6f-637fdaac697e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DaIn():\n",
-    "    def __init__(self):\n",
-    "        self.OBJECT= {\"SPEC_PATH\": \"/home/swei20/PIML/PIML_specIF/test/testdata/bosz_5000_RHB.h5\"}\n",
-    "        self.MODEL = {\n",
-    "            \"ResTune\" : {\"type\": \"Alex\", \"param\": {\"step\": 10, \"res\":10000}},\n",
-    "            }\n",
-    "        self.OP = {\"arm\": \"RedM\"}\n",
-    "        self.DATA  = {\"WSKY_PATH\": \"/home/swei20/PIML/PIMLspec/test/testdata/wavesky.npy\"}\n",
-    "\n",
-    "        self.PARAM = {\n",
-    "            \"object\": self.OBJECT,\n",
-    "            \"data\"  : self.DATA,\n",
-    "            \"op\"    : self.OP,\n",
-    "            \"model\" : self.MODEL\n",
-    "        }"
+    "sys.path.append(\"..\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "id": "f2211524-ebd1-4fb8-aca1-0a9eb40d7212",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/swei20/PIML/PIMLspec/test/interface/gateway'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c5c0c7f5-6593-4841-bad5-6b977f626045",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from test.dataloader import TestDataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "3a08b61e-de35-432d-8b17-d22c03bdda2a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "D = DaIn()"
+    "D = TestDataLoader()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "bf25f9e5-ebf5-4fbb-b0c0-9f2ac47a8a1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from specIF.gateway.specprocessIF import StellarSpecProcessIF"
+    "from spec.interface.gateway.specprocessIF import StellarSpecProcessIF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "3af4f491-4aa3-487a-944f-58855a887b5f",
    "metadata": {},
    "outputs": [],
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "72f6a430-9da0-4f66-9a42-bd1ffe75f029",
    "metadata": {},
    "outputs": [],
@@ -143,49 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "6ecbc91d-376a-4c51-b298-f81515f876de",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'arm': 'RedM'}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PIF.OP_PARAM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "5f508819-8391-43cd-89be-d56d5c39ae85",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ResTune': {'type': 'Alex', 'param': {'step': 10, 'res': 10000}}}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PIF.OP_MODEL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "646ce025-74e5-4b4c-852c-e460d6018fbe",
    "metadata": {},
    "outputs": [
@@ -290,13 +249,13 @@
        "        0.39701091, 0.39594507, 0.40866664, 0.42912755, 0.51500606,\n",
        "        0.97947304, 0.48022699, 0.4239523 , 0.42921031, 0.42897342,\n",
        "        0.42817814, 0.43675347, 1.09560973, 0.68419042, 0.44828174]),\n",
-       " 'map_snr': <scipy.interpolate.interpolate.interp1d at 0x7f64cdcec6d0>,\n",
-       " 'map_snr_inv': <scipy.interpolate.interpolate.interp1d at 0x7f64cdd02d10>,\n",
+       " 'map_snr': <scipy.interpolate.interpolate.interp1d at 0x7f648289d270>,\n",
+       " 'map_snr_inv': <scipy.interpolate.interpolate.interp1d at 0x7f64758d28b0>,\n",
        " 'step': 10,\n",
        " 'res': 1000,\n",
        " 'skyH': array([0.14686077, 0.14686077, 0.14684008, ..., 0.45501659, 0.46869104,\n",
        "        0.47365477]),\n",
-       " 'Obs': <spec.core.obs.baseobs.Obs at 0x7f64cdcedf70>,\n",
+       " 'Obs': <spec.center.core.obs.baseobs.Obs at 0x7f6475809130>,\n",
        " 'logflux': array([[14.29471548, 14.28819808, 14.28951243, ..., 13.93229754,\n",
        "         13.94421155, 13.93452839],\n",
        "        [14.29701653, 14.29037734, 14.29173853, ..., 13.93408439,\n",
@@ -312,7 +271,7 @@
        "         14.58305995, 14.56411137]])}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +282,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
+   "id": "28252b60-d144-43e0-8b33-c9c9f8d24b04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sky': array([0.15077469, 0.1495934 , 0.14423648, 0.14433482, 0.14747137,\n",
+       "        0.14836056, 0.14531086, 0.14922931, 0.14873182, 0.14719386,\n",
+       "        0.14742225, 0.14853853, 0.14872931, 0.14798906, 0.14843427,\n",
+       "        0.14942387, 0.15094892, 0.15054792, 0.15677576, 0.19068839,\n",
+       "        0.17415853, 0.15311395, 0.15320229, 0.16651898, 0.17029691,\n",
+       "        0.15508382, 0.18025812, 0.1883331 , 0.16233235, 0.16886398,\n",
+       "        0.16669567, 0.15809255, 0.31407816, 0.52847163, 0.16061403,\n",
+       "        0.16233161, 0.16050382, 0.16841212, 0.16914596, 0.16412062,\n",
+       "        0.1623135 , 0.16355638, 0.17055147, 0.17649125, 0.16981551,\n",
+       "        0.16835615, 0.16894306, 0.16776282, 0.1689735 , 0.17108565,\n",
+       "        0.21743374, 0.21017425, 0.18578376, 0.17103679, 0.17821553,\n",
+       "        0.18634029, 0.19609469, 0.25088166, 0.22023136, 0.19109764,\n",
+       "        0.18437969, 0.18709035, 0.17928734, 0.24631951, 0.32752443,\n",
+       "        0.17920501, 0.17541241, 0.22140323, 0.18607524, 0.1782438 ,\n",
+       "        0.18310485, 0.18102709, 0.17813475, 0.18273535, 0.18308226,\n",
+       "        0.20850683, 0.2118021 , 0.18088978, 0.18353911, 0.18650233,\n",
+       "        0.19413879, 0.19525158, 0.76060658, 0.41070454, 0.27989433,\n",
+       "        0.19448632, 0.19024132, 0.19733519, 0.1963367 , 0.19449762,\n",
+       "        0.20845266, 0.19697185, 0.20923709, 0.19921612, 0.2654738 ,\n",
+       "        0.24560004, 1.25410509, 0.31016396, 0.19801654, 0.19930584,\n",
+       "        0.91599799, 0.33785729, 0.20015064, 0.2026415 , 0.20763698,\n",
+       "        0.22937657, 0.2049907 , 0.20525852, 0.21241704, 0.21408006,\n",
+       "        0.21688857, 0.21091482, 0.22633555, 0.21669072, 0.80920067,\n",
+       "        0.41729497, 0.21616765, 0.21757693, 0.22760183, 0.22037829,\n",
+       "        0.23069926, 0.31258083, 0.66164141, 0.23407819, 0.2284911 ,\n",
+       "        0.29451444, 0.2552255 , 0.24677304, 0.25061808, 0.27271351,\n",
+       "        0.23868046, 0.2942626 , 0.29286793, 0.24830773, 0.25761645,\n",
+       "        0.25612404, 0.25562369, 0.31110623, 0.27861942, 0.2818129 ,\n",
+       "        0.27547543, 0.26052986, 0.30132864, 0.28439904, 0.2585277 ,\n",
+       "        0.26765433, 0.26786594, 0.27126658, 0.2669448 , 0.27765435,\n",
+       "        0.28202935, 0.30781825, 0.29414398, 0.32187064, 1.09440948,\n",
+       "        0.82300544, 0.46244163, 0.29063734, 0.2874183 , 0.27793168,\n",
+       "        0.34223132, 0.52313925, 0.29900544, 0.3011935 , 0.29610237,\n",
+       "        0.3016806 , 0.30705132, 0.30734797, 0.33346364, 0.34129663,\n",
+       "        0.34182358, 0.36290769, 0.32780384, 0.30921269, 0.31294904,\n",
+       "        0.31262137, 0.32121396, 0.31462864, 0.31871594, 0.33745691,\n",
+       "        0.3378131 , 0.33997603, 0.34806574, 0.32992386, 0.33393286,\n",
+       "        0.46343167, 0.33909138, 0.34069703, 0.34190535, 0.36394823,\n",
+       "        0.39202571, 0.35838278, 0.35326057, 0.3993782 , 0.64865861,\n",
+       "        0.49148915, 0.42861642, 0.4912762 , 0.50733858, 0.80176853,\n",
+       "        0.6440612 , 0.42033427, 0.4062287 , 0.39021821, 0.39096852,\n",
+       "        0.39701091, 0.39594507, 0.40866664, 0.42912755, 0.51500606,\n",
+       "        0.97947304, 0.48022699, 0.4239523 , 0.42921031, 0.42897342,\n",
+       "        0.42817814, 0.43675347, 1.09560973, 0.68419042, 0.44828174]),\n",
+       " 'step': 10}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PIF.Object.Obs.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "07bfe4b6-cade-4b1b-af97-1a9171a8144b",
    "metadata": {},
    "outputs": [
@@ -345,7 +369,7 @@
        "        14.58305995, 14.56411137]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
