--- a/test/interface/gateway/specprocessIF.ipynb
+++ b/test/interface/gateway/specprocessIF.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "0f688215-301b-44a9-8288-fba94b4476a8",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "[None, None]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "a071e9d7-d843-4b30-ab8f-719084a14ccf",
    "metadata": {},
    "outputs": [],
@@ -63,38 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "c1d8c579-052e-4f00-aa6f-637fdaac697e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys.path.append(\"..\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "f2211524-ebd1-4fb8-aca1-0a9eb40d7212",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/swei20/PIML/PIMLspec/test/interface/gateway'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "c5c0c7f5-6593-4841-bad5-6b977f626045",
    "metadata": {},
    "outputs": [],
@@ -104,12 +73,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "3a08b61e-de35-432d-8b17-d22c03bdda2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "D = TestDataLoader()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fe15a59c-ffae-4823-bc90-f8a952dbb059",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2880, 220)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.flux.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4d7f6dcc-ee1b-4948-bf5b-f5d3a89cea1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from base.interface.gateway.baseloaderIF import DictLoaderIF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "eeba45f5-2a25-4c7e-a6c2-676a7a2337f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader = DictLoaderIF(D.BOSZ_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2e971615-466c-42b1-b053-336d92de4772",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "para = loader.load_arg(\"para\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "87e9dade-8e65-4129-a2de-90551a2106fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DG = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f003873b-443c-4558-b2a3-89fce16b0acf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DG[\"para\"] = para"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e4222823-82a9-4717-a2e9-d631866c0824",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DG[\"pdx\"] = loader.load_arg(\"pdx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7dbe3d45-ca91-4623-ad5d-10a349323b14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DG[\"flux\"] = np.log(D.flux)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "93abca50-8fdd-43de-b611-581aaae858aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'para': array([[-1.00e+00,  5.50e+03,  2.00e+00, -7.50e-01, -2.50e-01],\n",
+       "        [-1.00e+00,  5.50e+03,  2.00e+00, -7.50e-01,  0.00e+00],\n",
+       "        [-1.00e+00,  5.50e+03,  2.00e+00, -7.50e-01,  2.50e-01],\n",
+       "        ...,\n",
+       "        [ 0.00e+00,  6.75e+03,  3.50e+00,  5.00e-01,  0.00e+00],\n",
+       "        [ 0.00e+00,  6.75e+03,  3.50e+00,  5.00e-01,  2.50e-01],\n",
+       "        [ 0.00e+00,  6.75e+03,  3.50e+00,  5.00e-01,  5.00e-01]]),\n",
+       " 'pdx': array([[ 6,  8,  4,  0,  0],\n",
+       "        [ 6,  8,  4,  0,  1],\n",
+       "        [ 6,  8,  4,  0,  2],\n",
+       "        ...,\n",
+       "        [10, 13,  7,  5,  1],\n",
+       "        [10, 13,  7,  5,  2],\n",
+       "        [10, 13,  7,  5,  3]]),\n",
+       " 'flux': array([[14.29471548, 14.28819808, 14.28951243, ..., 13.93229754,\n",
+       "         13.94421155, 13.93452839],\n",
+       "        [14.29701653, 14.29037734, 14.29173853, ..., 13.93408439,\n",
+       "         13.94602114, 13.93632898],\n",
+       "        [14.29974988, 14.29293037, 14.29435623, ..., 13.936134  ,\n",
+       "         13.94811652, 13.93835631],\n",
+       "        ...,\n",
+       "        [15.06392408, 15.04008567, 15.01383243, ..., 14.58632686,\n",
+       "         14.57220045, 14.55279423],\n",
+       "        [15.06983231, 15.04513941, 15.01968634, ..., 14.59130168,\n",
+       "         14.57697505, 14.55772406],\n",
+       "        [15.07741448, 15.05129884, 15.02723127, ..., 14.59776234,\n",
+       "         14.58305995, 14.56411137]])}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f716034b-5064-4854-b0e7-1e7060802d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from base.interface.gateway.basestorerIF import DictStorerIF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5973bc43-2812-4b69-84df-c62c1f7fe498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = \"/home/swei20/PIML/PIMLgrid/test/testdata/grid.h5\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e2af21eb-8636-4c55-b7aa-4e4d7e8e8172",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "storer = DictStorerIF(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6279579d-15cb-4332-abb8-5c908211a8e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "storer.store_dict_args(DG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e34beb30-5beb-423c-bb7c-b965b977620b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2880, 5)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "para.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "462fab46-8124-4a27-98c8-818720ab4916",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/datascope/subaru/user/swei20/data/pfsspec/import/stellar/grid/'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.environ[\"BOSZGRID\"]"
    ]
   },
   {
