--- a/test/interface/gateway/specprocessIF.ipynb
+++ b/test/interface/gateway/specprocessIF.ipynb
@@ -83,6 +83,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "eadce308-f885-41ac-82fa-8ddf8ee6e683",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'OBJECT': {'BOSZ_PATH': '/datascope/subaru/user/swei20/data/pfsspec/import/stellar/grid/bosz_5000_RHB.h5'},\n",
+       " 'MODEL': {'ResTune': {'type': 'Alex', 'param': {'step': 10, 'res': 10000}}},\n",
+       " 'OP': {'arm': 'RedM'},\n",
+       " 'DATA': {'WSKYPATH': '/home/swei20/PIML/PIMLspec/test/./testdata/wavesky.npy',\n",
+       "  'wavesky': array([[3.2000e+03, 3.4999e+03, 3.5017e+03, ..., 1.0990e+04, 1.0995e+04,\n",
+       "          1.1000e+04],\n",
+       "         [0.0000e+00, 0.0000e+00, 6.5060e-01, ..., 2.5256e+00, 2.5006e+00,\n",
+       "          2.8139e+00]])},\n",
+       " 'OUT': {}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.PARAM"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "fe15a59c-ffae-4823-bc90-f8a952dbb059",
    "metadata": {},
